# FiveMinute-SJH

./: Database 선택.PPTX  README.MD  README.md  next.config.ts  근태관리 App UI.PPTX
SJH_5_minute_ricebowl/: README.md
SJH_5_minute_ricebowl/src/routes/: NavBarRoutes.tsx
SNU_BMT_GUI/: CMakeLists.txt  README.md  icons.qrc  main.cpp
SNU_BMT_GUI/enum/: bmt_enums.h
SNU_BMT_GUI/include/: bmt_process_progressbar.h  snu_bmt_processmanager.h
SNU_BMT_GUI/interface/: snu_bmt_gui_caller.cpp  snu_bmt_gui_caller.h  snu_bmt_interface.h
SNU_BMT_GUI/linuxdeployqt_necessaryFiles/: SNU_AI_BMT_GUI.desktop  script.txt
SNU_BMT_GUI/log/: logmanager.cpp  logmanager.h
SNU_BMT_GUI/login/: authmanager.cpp  authmanager.h  loginbutton.cpp  loginbutton.h
SNU_BMT_GUI/src/: bmt_process_progressbar.cpp
SNU_BMT_GUI/theme/: app_theme_manager.cpp  app_theme_manager.h
SNU_BMT_GUI/ui/: databaseresultmanagerwidget.cpp  databaseresultmanagerwidget.h  databaseresultmanagerwidget.ui  logdialog.ui  logindialogmodal.cpp  logindialogmodal.h  logindialogmodal.ui  logmanagerwidget.cpp  logmanagerwidget.h  logmanagerwidget.ui  snu_bmt_gui.cpp  snu_bmt_gui.h  snu_bmt_gui.ui  snu_bmt_gui_template.h
SNU_BMT_GUI/was/: bmt_database_manager.cpp  bmt_database_manager.h  bmt_was_url.cpp  bmt_was_url.h
SNU_BMT_GUI/windowdeployqt_necessaryFiles/: script.txt
finve-minute-react-native-paper-app/: Expo Router Reserved Filenames or directories.docx  app.json  eas.json  package-lock.json  package.json
finve-minute-react-native-paper-app-managedWorkFlow-ExpoGo/: package-lock.json  package.json
finve-minute-react-native-paper-app-managedWorkFlow-ExpoGo/app/: _layout.tsx
finve-minute-react-native-paper-app-managedWorkFlow-ExpoGo/app/(tabs)/: index.tsx
finve-minute-react-native-paper-app-managedWorkFlow-ExpoGo/components/: ExternalLink.tsx  Header.tsx  LoginRequired.tsx  MyActivityIndicator.tsx  MyScrollView.tsx
finve-minute-react-native-paper-app-managedWorkFlow-ExpoGo/firebase/: services.ts
finve-minute-react-native-paper-app-managedWorkFlow-ExpoGo/hooks/: useBLE.ts  useInventoryItemsMap.ts  useInventoryRecentItems.ts  useScanBLEs.tsx
finve-minute-react-native-paper-app-managedWorkFlow-ExpoGo/util/: time-manager.ts
finve-minute-react-native-paper-app/android/: settings.gradle
finve-minute-react-native-paper-app/app/: +not-found.tsx  _layout.tsx
finve-minute-react-native-paper-app/components/: Header.tsx  ParallaxScrollView.tsx
finve-minute-react-native-paper-app/hooks/: useInventoryItemsMap.ts  useInventoryRecentItems.ts
five-min-RNP-bareWorkFlow/: 33ZNUDZ86C.cer  33ZNUDZ86C.certSigningRequest  app.json  eas.json  package-lock.json  package.json
five-min-RNP-bareWorkFlow/android/: settings.gradle
five-min-RNP-bareWorkFlow/app/: _layout.tsx
five-min-RNP-bareWorkFlow/components/: Header.tsx  LoginRequired.tsx
five-min-RNP-bareWorkFlow/firebase/: services.ts
five-min-RNP-bareWorkFlow/hooks/: useAuthForm.ts  useScanBLEs.tsx
five-min-RNP-bareWorkFlow/ios/: Podfile
five-min-RNP-bareWorkFlow/util/: dailyNotificationAsync.ts  registerForPushNotificationsAsync.ts  time-manager.ts
five-minute-nextjs-deployment/: package.json  재고표.xlsx
five-minute-nextjs-web/: README.md  next.config.ts  package-lock.json  package.json
src/routes/: NavBarRoutes.tsx
(+241 files in other folders)
